--- a/article/templates/base.html
+++ b/article/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
     <link rel="stylesheet" href="http://picturebag.qiniudn.com/blog.css">
+    <link rel="stylesheet" href="http://picturebag.qiniudn.com/monokai.css">
 </head>
 <body>
 <div id="layout" class="pure-g">
@@ -27,6 +28,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="pure-button" href="http://stackoverflow.com/users/1513457/qu-dong">Stack Overflow</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="button-success pure-button" href="{% url 'archives' %}">Archives</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="button-success pure-button" href="{% url 'about_me' %}">About Me</a>
                     </li>
 
                 </ul>
